# alephium_blockviz

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  alephium_visualizer.sln  alephium_visualizer.vcxproj  alephium_visualizer.vcxproj.filters  config.json  install_deps.bat  install_deps.sh  vcpkg.json
.github/workflows/: linux-ci.yml
.grok/skills/vulkan-validator/: SKILL.md
docs/: ROADMAP.html  ROADMAP.md  architecture.html  blockflow-confirmed-tips-design.html  blockflow-confirmed-tips-design.md  build-performance.html  build-performance.md  dev-roadmap.html  graphics-modularization-design.html  graphics-modularization-design.md  index.html  linux.html  linux.md  perf-bottlenecks.html  perf-bottlenecks.md  platform.html  platform.md  segment-disk-cache.html  segment-disk-cache.md  site.css  user-guide-controls.html  user-guide-legend.html  user-guide-network-fill.html  user-guide-timeline.html
docs/brand/: alephium_palette.html  alephium_palette.md
docs/layers/: README.html  README.md  app.html  app.md  domain.html  domain.md  engine.html  engine.md  graphics.html  graphics.md  index.html  network.html  network.md
docs/planning/: README.html  README.md  index.html
engine/: blockviz_engine.vcxproj
graphics/: graphics.vcxproj  graphics.vcxproj.filters
resource/: style_blockflow.json
scripts/: bench_build.ps1  check_docs_html_parity.py  check_include_boundary.py  check_pch.py  generate_vnv_report.py  include_audit.ps1  md_to_docs_html.py  run_bench_matrix.sh  run_visual_tests.ps1  run_vnv.ps1  run_vnv.sh  smoke_dual_track.sh  sync_solutions.ps1  tag-main-release.ps1  vnv_pack_report.py  vnv_report_layout.sh
sln/: Directory.Build.props  _template_system.vcxproj.example  alephium_visualizer.sln  alephium_visualizer.vcxproj  alephium_visualizer.vcxproj.filters  bench_frame_profiler.vcxproj  blockviz_engine.vcxproj  blockviz_engine.vcxproj.filters  blockviz_tests.vcxproj  blockviz_vnv.sln  graphics.vcxproj  graphics.vcxproj.filters  graphics_visual_tests.vcxproj  int_visual.vcxproj  mod_domain.vcxproj  mod_network.vcxproj  network.vcxproj  network.vcxproj.filters
src/: alph_block.hpp  block.hpp  commands.c  commands.h  compile_shaders.py  config.c  config.h  dag.c  dag.cpp  dag.h  dag.hpp  frag.glsl  frag.spv  main.c  main.cpp  vert.glsl  vert.spv  vulkan_renderer.cpp  vulkan_renderer.hpp
src/adapters/alephium/: alephium_adapter.cpp  alephium_adapter.hpp  alph_detail_store.cpp  alph_detail_store.hpp  block_fetch_pool.cpp  main_chain_cache.cpp  main_chain_cache.hpp  network_poller.cpp  network_poller.hpp
src/app/: app_identity.hpp  blockflow_overlay.cpp  blockflow_overlay.hpp  camera_controller.hpp  camera_state.hpp  config.c  config.h  main.cpp  motion_easing.hpp  pch.cpp  pch.h  ring_motion.hpp  scene_presenter.cpp  scene_presenter.hpp  style_blockflow.hpp  ui_chrome.hpp  ui_snapshot.hpp  user_prefs.hpp  window_fullscreen.hpp
src/app/platform/: app_platform.hpp  app_platform_linux.cpp  app_platform_win32.cpp
src/common/: env_util.hpp  time_util.hpp
src/domain/: alph_block.hpp  block_graph.cpp  block_graph.hpp  block_graph_spike.cpp  block_scene.cpp  block_scene.hpp  layout.cpp  layout.hpp
src/engine/: blockviz_engine.cpp  blockviz_engine_api.hpp  blockviz_engine_stub.cpp  engine.cpp  engine.hpp  engine_identity.hpp  frame_descriptors.cpp  frame_presenter.cpp  frame_presenter.hpp  frame_recorder.cpp  frame_recorder.hpp  frame_resources.cpp  frame_resources.hpp  frame_sync.cpp  frame_sync.hpp  frame_types.hpp  pch.cpp  pch.h  picker.cpp  picker.hpp  sobel_compute.cpp  sobel_compute.hpp  swapchain_targets.cpp  swapchain_targets.hpp  system.hpp  vertex_types.hpp  vulkan_engine.cpp  vulkan_engine.hpp
src/engine/frame_graph/: frame_task_graph.cpp  frame_task_graph.hpp
src/engine/pipelines/: cube_pipeline.cpp  cube_pipeline.hpp  picker_pipeline.cpp  picker_pipeline.hpp
src/graphics/: buffer.cpp  buffer_manager.cpp  buffer_manager.hpp  camera.cpp  camera.hpp  compute.cpp  device.cpp  engine_requirements.cpp  engine_requirements.hpp  gpu_prv_lib.h  gpu_pub_lib.h  graphics_system.cpp  graphics_system.hpp  image.cpp  instance.cpp  mesh_arena.cpp  mesh_arena.h  pch.cpp  pch.h  pipeline.cpp  queue_types.hpp  sampler.cpp  shader.cpp  surface.cpp  swapchain.cpp  validation.cpp
src/graphics/core/: buffer.cpp  descriptor.cpp  device.cpp  instance.cpp  pipeline.cpp  sampler.cpp  sampler.hpp  shader.cpp  surface.cpp  swapchain.cpp  validation.cpp
src/graphics/debug/: debug_drawer.cpp  debug_drawer.h
src/graphics/frame/: async_sobel_submit.cpp  frame_descriptors.cpp  frame_descriptors.hpp  frame_loop.cpp  frame_presenter.cpp  frame_presenter.hpp  frame_recorder.cpp  frame_recorder.hpp  frame_resources.cpp  frame_resources.hpp  frame_shared_state.cpp  frame_shared_state.hpp  frame_sync.cpp  frame_sync.hpp  gpu_frame_publish.cpp  picker.cpp  picker.hpp  screenshot.cpp  selection_state.cpp  sobel_async_pass.cpp  sobel_async_pass.hpp  sobel_compute.cpp  sobel_compute.hpp  sobel_types.hpp  swapchain_targets.cpp  swapchain_targets.hpp  vertex_types.hpp
src/graphics/pipelines/: cube_pipeline.cpp  cube_pipeline.hpp  picker_pipeline.cpp  sobel_pipeline.cpp  sobel_pipeline.hpp
src/graphics/platform/: gfx_platform.hpp  gfx_platform_common.cpp  gfx_platform_linux.cpp  gfx_platform_win32.cpp  gpu_platform.hpp  gpu_platform_common.cpp  gpu_platform_linux.cpp  gpu_platform_win32.cpp
src/graphics/shaders/: color_frag.glsl  compile_shaders.py  cube.mesh.glsl  cube.task.glsl  cube_mesh_only.mesh.glsl  debug_mesh_vert.glsl  debug_mesh_vert.spv  depth_only_frag.glsl  edge_overlay_frag.glsl  (+8 more)
src/network/: commands.c  commands.h  network_domain.hpp  network_system.cpp  network_system.hpp  pch.cpp  pch.h
tests/: domain_tests.cpp
tests/visual/: README.md  graphics_visual_tests.cpp
vnv/: README.md  TESTING.md
vnv/bench/: README.md
vnv/framework/: expect.hpp  paths.hpp
vnv/int/: README.md
vnv/integration/: README.md
vnv/manifest/: case_catalog.json  libraries.json  product_apps.json  vnv_projects.json
vnv/mod/: README.md
vnv/reports/: README.md
(+87 files in other folders)
